Added `java.time` open module for `applicationDefaultJvmArgs`