@@ -49,6 +49,7 @@ application {
     applicationDefaultJvmArgs += arrayOf(
         "-Xmx8g",
         "--enable-native-access=ALL-UNNAMED",
+        "--add-opens=java.base/java.time=ALL-UNNAMED",
         "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
         "--add-opens=java.base/java.lang=ALL-UNNAMED",
         "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
